fix more alignment in documents

--- a/packages/documents/documents.less
+++ b/packages/documents/documents.less
@@ -81,6 +81,8 @@
       border: 0 none;
       text-transform: uppercase;
       letter-spacing: 2px;
+      margin: 0;
+      padding: 0;
     }
     .btn-default:hover, .btn-default:focus, .btn-default.focus,
     .btn-default:active, .btn-default.active,
